--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
+    "fetch-mock": "^5.10.0",
+    "jest": "^19.0.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-hot-loader": "^1.3.1",
+    "react-scripts": "0.9.5",
+    "redux-mock-store": "^1.2.3",
+    "sinon": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
